<resources>
    <string name="app_name">Authenticatiion</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="home_page">Home Page</string>
    <string name="sign_in_page">Sign In Page</string>
    <string name="username">Username</string>
    <string name="password1">Password</string>
    <string name="submit1">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
</resources>